<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_3"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:background="@color/colorGrayBg"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp">

        <TextView
            android:id="@+id/tv_forgot_password_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="@android:color/black"
            android:text="@string/forgot_password_label"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:id="@+id/tv_forgot_password_instruction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:text="@string/forgot_password_instruction"/>

        <TextView
            android:id="@+id/tv_website_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:text="@string/jct_website"
            android:layout_marginBottom="20dp"/>

        <EditText
            android:id="@+id/et_forgot_password_email_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:imeOptions="actionNext"
            android:hint="@string/login_id_hint"
            android:inputType="textEmailAddress"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="30dp"
            android:padding="@dimen/eight_dp"/>

        <Button
            android:id="@+id/btn_reset_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset_password"
            android:textColor="@android:color/white"
            android:background="@color/colorTheme"/>

    </LinearLayout>

</RelativeLayout>