<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_3"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:background="@color/colorGrayBg"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp">

        <TextView
            android:id="@+id/tv_update_password_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="@android:color/black"
            android:text="@string/update_password_label"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"/>

        <EditText
            android:id="@+id/et_current_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:inputType="textPassword"
            android:imeOptions="actionNext"
            android:hint="@string/current_password_hint"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="12dp"
            android:padding="@dimen/eight_dp"/>

        <EditText
            android:id="@+id/et_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:background="@android:color/white"
            android:hint="@string/new_password_hint"
            android:imeOptions="actionNext"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:padding="@dimen/eight_dp"
            android:layout_marginBottom="12dp"/>

        <EditText
            android:id="@+id/et_confirm_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:background="@android:color/white"
            android:hint="@string/confirm_new_password_hint"
            android:imeOptions="actionNext"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:padding="@dimen/eight_dp"
            android:layout_marginBottom="32dp"/>

        <Button
            android:id="@+id/btn_update_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update"
            android:textColor="@android:color/white"
            android:background="@color/colorTheme"/>

    </LinearLayout>

</RelativeLayout>