<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_3"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:background="@color/colorGrayBg"
        android:layout_marginLeft="@dimen/twenty_four_dp"
        android:layout_marginRight="@dimen/twenty_four_dp">

        <TextView
            android:id="@+id/tv_register_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/twenty_sp"
            android:textColor="@android:color/black"
            android:text="@string/register_label"
            android:layout_marginTop="@dimen/twenty_dp"
            android:layout_marginBottom="@dimen/twenty_dp"/>

        <LinearLayout
            android:id="@+id/ll_name_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4"
            android:paddingLeft="@dimen/twelve_dp"
            android:paddingRight="@dimen/twelve_dp">

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/spinner_salutation"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:spinnerMode="dropdown"
                android:background="@color/colorWhite"
                android:layout_marginBottom="@dimen/twelve_dp"
                android:layout_height="match_parent"/>

            <EditText
                android:id="@+id/et_name"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:hint="@string/register_name_hint"
                android:maxLines="1"
                android:layout_marginBottom="@dimen/twelve_dp"
                android:layout_marginLeft="@dimen/twelve_dp"
                android:padding="@dimen/eight_dp"/>
        </LinearLayout>

        <EditText
            android:id="@+id/et_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email_et"
            android:background="@android:color/white"
            android:hint="@string/register_country_hint"
            android:layout_marginLeft="@dimen/twelve_dp"
            android:layout_marginRight="@dimen/twelve_dp"
            android:padding="@dimen/eight_dp"
            android:maxLines="1"
            android:layout_marginBottom="@dimen/twelve_dp"/>

        <EditText
            android:id="@+id/et_registration_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:inputType="textEmailAddress"
            android:hint="@string/register_email_hint"
            android:layout_marginLeft="@dimen/twelve_dp"
            android:layout_marginRight="@dimen/twelve_dp"
            android:layout_marginBottom="@dimen/twenty_four_dp"
            android:padding="@dimen/eight_dp"/>


        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_label"
            android:textColor="@android:color/white"
            android:background="@color/colorTheme"/>

    </LinearLayout>

</RelativeLayout>